crates/trawl-cli/src/tui/ui/snapshots/trawl_cli__tui__ui__tests__render_saved_schedule_windowed_without_lag.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" M-1 Query   M-2 History   M-3 Schema   M-4 Saved                                                                                                               "
"                                                                                                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│nightly errors [1h window 2h]                                           nightly errors                                                                        │"
"│                                                                        ────────────────────────────────────────                                              │"
"│                                                                        query  _severity>=error | stats count() by service                                    │"
"│                                                                        sched  every 1h (enabled)                                                             │"
"│                                                                               window 2h                                                                      │"
"│                                                                               next fire 2026-03-14 04:00:00 UTC                                              │"
"│                                                                        runs   1                                                                              │"
"│                                                                                                                                                              │"
"│                                                                        runs (1 total)  ↑↓ navigate  Enter view  q query                                      │"
"│                                                                        ✓ #41    45m 120ms 12 rows  fixed [2026-03-14 01:00:00 .. 03:00:00)                   │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"idle [editor]                                                                                                Shift+Enter: execute | Ctrl+S: save | Ctrl+L: clear"
