crates/trawl-cli/src/tui/ui/snapshots/trawl_cli__tui__ui__tests__render_with_help_popup.snap
---
source: crates/trawl-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" M-1 Query   M-2 History   M-3 Schema   M-4 Saved                               "
"                                                                                "
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│               ┌ Help ────────────────────────────────────────┐               │"
"│               │                                              │               │"
"│               │Navigation                                    │               │"
"│               │                                              │               │"
"│               │  Alt+1           - Query tab                 │               │"
"│               │  Alt+2           - History tab               │               │"
"│               │  Alt+3           - Schema tab                │               │"
"└───────────────│  Alt+4           - Saved tab                 │───────────────┘"
"┌ Results ──────│  Tab             - accept suggestion / cycle │───────────────┐"
"│               │  Esc             - close panel / cancel / des│               │"
"│               │                                              │               │"
"│               │Query Editor                                  │               │"
"│               │                                              │               │"
"│               │  Shift+Enter     - execute query             │               │"
"│               │  Ctrl+Enter      - execute query (alt)       │               │"
"│               └──────────────────────────────────────────────┘               │"
"│                              Client: 0.9.1                                   │"
"│                              Server: —                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [editor]                    Shift+Enter: execute | Ctrl+S: save | Ctrl+L: clear"
